--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
     
-    <title>IECM | PREP 2024</title>
+    <title>IECM | SICODID 2024</title>
     <!--
         --------------------------------------------
         --------------------------------------------
