--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         --------------------------------------------
         --------------------------------------------
     -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y0M20DM3VT">
-    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N3XEG0JJV0"></script>
 
   <script>
   /*
@@ -43,7 +42,7 @@
     
       function gtag(){dataLayer.push(arguments);}        
       gtag('js', new Date());
-      gtag('config', 'G-Y0M20DM3VT');
+      gtag('config', 'G-N3XEG0JJV0');
   
     </script>
   </head>
